<resources>
    <string name="app_name">Movie Screening</string>
    <string name="admin">Admin</string>
    <string name="customer">Customer</string>
    <string name="title_activity_admin_page">AdminPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_movie">Select Movie</string>
    <string name="please_select_the_number_of_tickets">Please select the number of tickets</string>
    <string name="enter_the_number_of_tickets">Enter the number of tickets</string>
    <string name="number_of_tickets">Number of tickets</string>
    <string name="book_tickets">Book Tickets</string>
    <string name="number_of_tickets_remaining">Number of tickets remaining:</string>
    <string name="the_booking_is_not_open_at_this_time">The Booking is not open at this time!, please check with the ADMIN</string>
    <string name="start_the_booking">Start the Booking!</string>
    <string name="close_booking_for_the_day">Close booking for the day!</string>
    <string name="screen_1">Screen 1</string>
    <string name="screen_2">Screen 2</string>
    <string name="screen_3">Screen 3</string>
    <string name="screen_4">Screen 4</string>
    <string name="screen_5">Screen 5</string>
    <string name="please_select_which_movie_you_want_to_play_in_all_the_screens">Please select which movie you want to Play in all the Screens!</string>
    <string name="reports_by_screens">Report by SCREENS</string>
    <string name="report_by_movies">Report by MOVIES</string>
    <string name="sales_for_screen_1">Sales for Screen 1</string>
    <string name="sales_for_screen_2">Sales for Screen 2</string>
    <string name="sales_for_screen_3">Sales for Screen 3</string>
    <string name="sales_for_screen_4">Sales for Screen 4</string>
    <string name="sales_for_screen_5">Sales for Screen 5</string>
    <string name="total_tickets_sold">TOTAL TICKETS SOLD:</string>
    <string name="end_the_day">End the Day!</string>
    <string name="view_report">View Report</string>
</resources>