<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".BookingsReportActivity">

    <TextView
        android:id="@+id/totalTicketsSold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total_tickets_sold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reports_by_screens" />

        <TextView
            android:id="@+id/salesForScreen1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sales_for_screen_1" />

        <TextView
            android:id="@+id/salesForScreen2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sales_for_screen_2" />

        <TextView
            android:id="@+id/salesForScreen3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sales_for_screen_3" />

        <TextView
            android:id="@+id/salesForScreen4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sales_for_screen_4" />

        <TextView
            android:id="@+id/salesForScreen5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sales_for_screen_5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_by_movies" />

        <TextView
            android:id="@+id/salesForMovie1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/sales_for_screen_1" />

        <TextView
            android:id="@+id/salesForMovie2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/sales_for_screen_1" />

        <TextView
            android:id="@+id/salesForMovie3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/sales_for_screen_1" />

        <TextView
            android:id="@+id/salesForMovie4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/sales_for_screen_1" />

        <TextView
            android:id="@+id/salesForMovie5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/sales_for_screen_1" />

        <TextView
            android:id="@+id/salesForMovie6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/sales_for_screen_1" />

        <TextView
            android:id="@+id/salesForMovie7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/sales_for_screen_1" />

        <TextView
            android:id="@+id/salesForMovie8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/sales_for_screen_1" />

    </LinearLayout>

    <Button
        android:id="@+id/end_the_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_the_day" />
    <!--    show the report for the day-->

</LinearLayout>