<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AdminActivity">

    <LinearLayout
        android:id="@+id/BookingClosed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_booking_is_not_open_at_this_time" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/BookingOpen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_movie" />

            <Spinner
                android:id="@+id/movie_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_tickets_remaining" />

            <TextView
                android:id="@+id/numberOfTicketsRemaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_tickets" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_of_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/bookTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_tickets" />

    </LinearLayout>

</LinearLayout>